# ComfyUI-clip-interrogator-sfw

./: README.md  node_mappings.py  pyproject.toml
module/: __init__.py
