[project]
name = "comfyui-clip-interrogator-sfw"
description = "ComfyUI custom nodes of clip-interrogator-sfw"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/cpietsch/ComfyUI-clip-interrogator-sfw"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "prodogape"
DisplayName = "ComfyUI-clip-interrogator-sfw"
Icon = "https://avatars.githubusercontent.com/u/89724016?s=400&u=cd218743591faf329d4b4f07a14de1130a9f56cc&v=4"